# qcs-sdk-c

./: .gitignore  .releaserc.yml  404.html  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  deny.toml  getting_started.html  index.html  installation.html  intro.html  libqcs.h  print.html  searchindex.js  searchindex.json
.github/workflows/: book.yml  checks.yml  release.yml  release_dry_run.yml
api/: executable.html  executable_from_quil.html  execute_on_qpu.html  execute_on_qvm.html  execution_data.html  execution_result.html  free_executable.html  free_execution_result.html  get_data.html  read_from.html  register_data.html  result_handle.html  set_param.html  wrap_in_shots.html
book/: book.toml
book/src/: SUMMARY.md  getting_started.md  installation.md
book/src/api/: executable.md  executable_from_quil.md  execute_on_qpu.md  execute_on_qvm.md  execution_data.md  execution_result.md  free_executable.md  free_execution_result.md  get_data.md  read_from.md  register_data.md  result_handle.md  set_param.md  wrap_in_shots.md
html/: 404.html  getting_started.html  index.html  installation.html  print.html  searchindex.js  searchindex.json
html/api/: executable.html  execution_data.html  free_executable.html  free_execution_result.html  get_data.html  read_from.html  set_param.html  wrap_in_shots.html
src/: lib.rs  qpu.rs  qvm.rs
tests/: integration_tests.c
