[package]
name = "qcs-sdk-c"
description = "C bindings to the qcs-sdk-rust crate."
version ="0.2.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-sdk-c"
keywords = ["C", "SDK", "Rigetti", "Quil", "Quantum"]
categories = ["api-bindings", "compilers", "science"]
publish = false

[lib]
name = "qcs"
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.8"
http = "0.2.8"
qcs = "0.3.2"
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }

[features]
